--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,7 +81,7 @@ main .content {
 	height: 100%;
 }
 
-main .content h1 {
+main .content h1, h2 {
 	font-size: 2em;
 	text-align: center;
 	margin-bottom: 30px;
