chore: atualização de cores da programação

--- a/src/css/program.css
+++ b/src/css/program.css
@@ -1,6 +1,6 @@
 :root {
-    --tb-color1: #C0C0C0;
-    --tb-color2: #DCDCDC;
+    --tb-color1: #85d0ff;
+    --tb-color2: #eaf8ff;
     --tb-color-hover: #778899;
 }
 
