--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-	--primary-color: #38b6ff;
-	--secondary-color: #ff751f;
+	--primary-color: #00aeef;
+	--secondary-color: #f58220;
 	--tertiary-color: #2e3133;
 }
 body {
