--- a/src/css/courses.css
+++ b/src/css/courses.css
@@ -52,3 +52,31 @@ main .content .talker-card details summary {
   padding: 10px;
   border-radius: 10px;
 }
+
+.alerta-container {
+  background-color: #ffffff90;
+  border-radius: 15px;
+  color: var(--secondary-color);
+  padding: 8px 0;
+  width: 100%;
+  z-index: 1000;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.alerta-texto {
+  font-size: 16px;
+  font-weight: 600;
+  animation: scroll 12s linear infinite;
+  display: inline-block;
+  padding-left: 100%;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
