--- a/src/css/program.css
+++ b/src/css/program.css
@@ -9,6 +9,7 @@ main .content .program-table {
   max-width: 100%;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+  margin-bottom: 30px;
 }
 
 main .content .program-table table {
@@ -49,7 +50,7 @@ main .content .program-table table .stick-column {
 }
 
 main .content .more-info {
-  margin-top: 30px;
+  margin-top: 10px;
   font-size: 1em;
   text-align: justify;
 }
