--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,6 +106,13 @@ main .content p a {
   color: var(--secondary-color);
 }
 
+main .content hr {
+  border: none;
+  border-top: 2px solid var(--secondary-color);
+  opacity: 0.6;
+  margin: 10px 0;
+}
+
 footer {
   background-color: var(--tertiary-color);
   color: white;
