--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,8 +40,46 @@ header .logo-instituicao img:first-child {
   height: 70%;
 }
 
+nav #burguer-icon {
+  height: 35px;
+  width: 35px;
+  padding: 5px;
+  border-radius: 7px;
+  display: none;
+  cursor: pointer;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  background-color: var(--primary-color);
+}
+
+nav #burguer-icon span {
+  display: block;
+  height: 3px;
+  width: 100%;
+  background-color: #fff;
+  margin: 4px 0;
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+nav #burguer-icon.active span:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 5px);
+}
+
+nav #burguer-icon.active span:nth-child(2) {
+  opacity: 0;
+}
+
+nav #burguer-icon.active span:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -5px);
+}
+
 nav ul {
   background-color: var(--primary-color);
+  width: 100%;
   height: 50px;
   display: flex;
   justify-content: space-evenly;
@@ -130,6 +168,10 @@ footer p a {
   font-weight: 600;
 }
 
+footer p a:hover {
+  color: var(--secondary-color);
+}
+
 @media (max-width: 800px) {
   header {
     justify-content: center;
@@ -143,13 +185,28 @@ footer p a {
     display: block;
   }
 
+  nav {
+    flex-direction: column;
+  }
+
   nav ul {
-    padding: 0 10px;
-    height: 90px;
     gap: 0 15px;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 0;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+  }
+
+  nav ul.active {
+    height: 260px;
   }
 
   nav ul li a {
     font-size: 1.3em;
+  }
+
+  nav #burguer-icon {
+    display: block;
   }
 }
