feat: responsividade pagina contato

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -37,6 +37,7 @@ main .content .buttons .button:active {
 }
 
 main .content .mapa {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
